ignore common unrelated folders to speedup

--- a/cross-repo-unused-methods-recorder.neon
+++ b/cross-repo-unused-methods-recorder.neon
@@ -7,6 +7,12 @@ parameters:
     customRulesetUsed: true
     errorFormat: crossRepoUnusedPublic
 
+    excludePaths:
+        # ignore common unrelated folders to speedup
+        - */.github/*
+        - */node_modules/*
+        - */vendor/*
+
 services:
     errorFormatter.crossRepoUnusedPublic:
         class: staabm\CrossRepoUnusedPublic\Recorder\ErrorFormatter
