ignore tests while recording

--- a/cross-repo-unused-methods-recorder.neon
+++ b/cross-repo-unused-methods-recorder.neon
@@ -17,6 +17,7 @@ parameters:
         - */.github/*
         - */node_modules/*
         - */vendor/*
+        - */tests/*
 
 services:
     errorFormatter.crossRepoUnusedPublic:
