moved NEON configs into dedicated folder

--- a/config/recorder.neon
+++ b/config/recorder.neon
@@ -1,8 +1,8 @@
 includes:
-    - src/unused-public-params.neon
-    - src/unused-public-services.neon
-    - src/unused-public-collectors.neon
-    # src/unused-public-rules.neon intentionally left out as we are just recording collector data
+    - unused-public-params.neon
+    - unused-public-services.neon
+    - unused-public-collectors.neon
+    # unused-public-rules.neon intentionally left out as we are just recording collector data
 
 parameters:
     customRulesetUsed: true
