ignore common unrelated folders to speedup

--- a/config/analyzer.neon
+++ b/config/analyzer.neon
@@ -6,3 +6,8 @@ includes:
 
 parameters:
     customRulesetUsed: true
+
+    excludePaths:
+        # ignore common unrelated folders to speedup
+        - */node_modules/*
+        - */vendor/*
