--- a/config/recorder.neon
+++ b/config/recorder.neon
@@ -1,4 +1,5 @@
 includes:
+    - phar://phpstan.phar/conf/bleedingEdge.neon # for speed
     - unused-public-params.neon
     - unused-public-services.neon
     - unused-public-collectors.neon
