--- a/config/recorder.neon
+++ b/config/recorder.neon
@@ -16,8 +16,10 @@ parameters:
 
     excludePaths:
         # ignore common unrelated folders to speedup
-        - */node_modules/*
-        - */vendor/*
+        analyseAndScan:
+            - */node_modules/*
+        analyse:
+            - */vendor/*
 
 services:
     errorFormatter.crossRepoUnusedPublic:
