--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
 		"nette/robot-loader": "^4.0",
 		"nette/utils": "^4.0",
 		"phpstan/phpstan": "^1 || ^2",
-		"tomasvotruba/unused-public": "^1 || ^2"
+		"tomasvotruba/unused-public": "dev-prot",
+		"phpstan/phpstan": "^1.0",
 	},
 	"require-dev": {
 		"php-parallel-lint/php-parallel-lint": "^1.4",
@@ -27,8 +28,14 @@
 		},
 		"files": [
 			"src/functions.php"
-		]
+		],
 	},
+	"repositories": [
+		{
+			"type": "vcs",
+			"url": "https://github.com/staabm/unused-public"
+		}
+	],
 	"scripts": {
 		"csfix": [
 			"vendor/bin/ecs --ansi --fix"
